CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(imageReader)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

SET(SRCS 
	src/imageReader.cpp
	src/main.cpp
#	src/sdl_test.cpp
   )

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -O2")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -O2")   

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} EGL GLESv2 X11 png12 jpeg)

